feat: Replace SplashScreen with LoginPage and implement authentication
- Removed SplashScreen and added LoginPage for user authentication.
- Integrated Firebase authentication service for user login.
- Updated app colors to a new theme with primary and secondary colors.
- Modified app theme to reflect new color scheme and styles.
- Updated pubspec.yaml to include firebase_auth and crypto dependencies.
- Updated web manifest and index.html for new app description and title.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="Suray Web Edit"
+        android:label="Editor de Horarios"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
