--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: suraywebedit
-description: "A new Flutter project."
+description: "Editor de horarios de buses Aysén y Coyhaique"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^2.13.0
   cloud_firestore: ^4.9.0
+  firebase_auth: ^4.6.3
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
