--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "suraywebedit",
-    "short_name": "suraywebedit",
+    "name": "Editor de Horarios",
+    "short_name": "Horarios",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#FF6B35",
+    "theme_color": "#FF6B35",
+    "description": "Editor de horarios de buses Aysén y Coyhaique",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
